# nostr-irc

./: Cargo.toml  README.md
src/: main.rs
src/lib/: mod.rs
src/lib/irc/: channel.rs  client_data.rs  message.rs  mod.rs  nickname.rs  peer.rs  server.rs
src/lib/nostr/: client.rs  metadata.rs  mod.rs  relay_connection.rs  subscription.rs
