[package]
name = "nostr-irc"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.23.0", features = ["net", "macros", "rt-multi-thread", "sync", "io-util"] }
nostr-sdk = "0.8.0"
nostr = "0.8"
tokio-tungstenite = { version = "0.18.0", features = ["connect", "stream", "rustls-tls-native-roots"] }
futures-util = "0.3.25"
futures = { version = "0.3.25", default-features = false, features = ["async-await"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio-stream = { version = "0.1.11" }
async-stream = "0.3.3"
async-recursion = "1.0.0"
